--- a/tecolotl-web/src/main/webapp/resources/paginacion/pie-tabla.xhtml
+++ b/tecolotl-web/src/main/webapp/resources/paginacion/pie-tabla.xhtml
@@ -8,9 +8,9 @@
         <cc:attribute name="htmlDataTable" required="true" type="javax.faces.component.html.HtmlDataTable"/>
     </cc:interface>
     <cc:implementation>
-        <h:outputFormat value="#{etiqueta['pages.total']}" styleClass="letra-tabla primera-mayuscula letra-titulo">
+        <h:outputFormat value="#{etiqueta['pages.total']}" styleClass="letra-titulo">
             <f:param value="#{(cc.attrs.htmlDataTable.first div cc.attrs.htmlDataTable.rows) + 1}"/>
-            <f:param value="#{cc.attrs.htmlDataTable.rowCount div cc.attrs.htmlDataTable.rows}"/>
+            <f:param value="#{cc.attrs.htmlDataTable.rows mod cc.attrs.htmlDataTable.rowCount}"/>
             <f:param value="#{cc.attrs.htmlDataTable.rowCount}"/>
         </h:outputFormat>
     </cc:implementation>
