--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -45,7 +45,13 @@
                 <div class="uk-card uk-card-default uk-card-small uk-card-hover">
                     <div class="uk-card-header">
                         <div class="uk-grid uk-grid-small">
-                            <div class="uk-width-auto"><h4 class="uk-text-capitalize"><span class="uk-text-middle">#{administracion['dashboard.titulo']}</span></h4></div>
+                            <div class="uk-width-1-3"><h4 class="uk-text-capitalize"><span class="uk-text-middle">#{administracion['dashboard.titulo']}</span></h4></div>
+                            <div class="uk-width-1-3">
+                                <h:form styleClass="uk-search largo-buscar ">
+                                    <span uk-search-icon=""/>
+                                    <input class="uk-search-input" type="search" placeholder="Search..."/>
+                                </h:form>
+                            </div>
                             <div class="uk-width-expand uk-text-right panel-icons">
                                 <button class="uk-icon-button uk-icon-link" uk-icon="icon: plus-circle; ratio: 1.5" uk-toggle="target: #modal-escuela"/>
                             </div>
