estilo modal alertas

--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -203,7 +203,7 @@
                                         <f:validateLength minimum="10" maximum="14"/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="input-escuela-cct" errorClass="uk-alert-danger"/>
+                                <h:message for="input-escuela-cct" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-2@m">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="input-escuela-nombre" value="#{administracion['dashboard.modal.name']}"/>
@@ -217,7 +217,7 @@
                                         <f:validateLength minimum="4" maximum="70"/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="input-escuela-nombre" errorClass="uk-alert-danger"/>
+                                <h:message for="input-escuela-nombre" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-6@m">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" for="input-escuela-codigo-postal" value="#{administracion['dashboard.modal.zipcode']}"/>
@@ -230,7 +230,7 @@
                                         <f:validateLength minimum="4" maximum="5"/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="input-escuela-codigo-postal" errorClass="uk-alert-danger" id="error-input-escuela-codigo-postal" showSummary="false" showDetail="true"/>
+                                <h:message for="input-escuela-codigo-postal" errorClass="uk-text-danger uk-display-block primera-mayuscula" id="error-input-escuela-codigo-postal" showSummary="false" showDetail="true"/>
                             </div>
                             <div class="uk-inline uk-width-1-1@s uk-width-1-6@m ">
                                 <h:commandButton  id="boton-busca-codigo" styleClass="uk-button uk-button-secondary uk-position-bottom-center" value="#{boton['search']}">
@@ -255,7 +255,7 @@
                                             <f:validateRequired/>
                                         </h:selectOneMenu>
                                     </div>
-                                    <h:message for="seleccion-colonia" errorClass="uk-alert-danger"/>
+                                    <h:message for="seleccion-colonia" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                                 </div>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-2@m">
@@ -270,7 +270,7 @@
                                         <f:validateLength minimum="11" maximum="60"/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="input-escuela-calle" errorClass="uk-alert-danger"/>
+                                <h:message for="input-escuela-calle" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-6@m">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" value="#{administracion['dashboard.modal.street.num.ext']}" for="input-escuela-numero-exterior"/>
@@ -284,7 +284,7 @@
                                         <f:validateLength minimum="1" maximum="15"/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="input-escuela-numero-exterior" errorClass="uk-alert-danger"/>
+                                <h:message for="input-escuela-numero-exterior" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-1-6@m">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" value="#{administracion['dashboard.modal.street.num.int']}" for="input-escuela-numero-interior"/>
@@ -297,7 +297,7 @@
                                         <f:validateLength minimum="1" maximum="15"/>
                                     </h:inputText>
                                 </div>
-                                <h:message for="input-escuela-numero-interior" errorClass="uk-alert-danger"/>
+                                <h:message for="input-escuela-numero-interior" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                             </div>
                             <div class="uk-width-1-1@s uk-width-2-5@m">
                                 <h:outputLabel styleClass="uk-form-label uk-text-capitalize" value="#{administracion['dashboard.modal.city']}" for="input-escuela-municipio"/>
@@ -357,7 +357,7 @@
                                     <f:validateRequired/>
                                 </h:selectOneMenu>
                             </div>
-                            <h:message for="seleccion-motivo-bloqueo" errorClass="uk-alert-danger"/>
+                            <h:message for="seleccion-motivo-bloqueo" errorClass="uk-text-danger uk-display-block primera-mayuscula"/>
                         </div>
                     </div>
                     <div class="uk-modal-footer uk-flex uk-flex-right">
